Show comment in detail product component

--- a/pyecommerce/store/templates/store/detailproduct.html
+++ b/pyecommerce/store/templates/store/detailproduct.html
@@ -10,11 +10,11 @@
           <div class="col-12 mb-0">
             <figure class="view overlay rounded z-depth-1 main-img">
               <a
-                href="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/15a.jpg"
+                href="{{product.image.url}}"
                 data-size="710x823"
               >
                 <img
-                  src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/15a.jpg"
+                  src="{{product.image.url}}"
                   class="img-fluid z-depth-1"
                 />
               </a>
@@ -24,8 +24,8 @@
       </div>
     </div>
     <div class="col-md-6">
-      <h5>Fantasy T-shirt</h5>
-      <p class="mb-2 text-muted text-uppercase small">Shirts</p>
+      <h5>{{product.name}}t</h5>
+      <p class="mb-2 text-muted text-uppercase small">{{product.category}}</p>
       <ul class="rating">
         <li>
           <i class="fas fa-star fa-sm text-primary"></i>
@@ -44,13 +44,10 @@
         </li>
       </ul>
       <p>
-        <span class="mr-1"><strong>$12.99</strong></span>
+        <span class="mr-1"><strong>${{product.price}}</strong></span>
       </p>
       <p class="pt-1">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam,
-        sapiente illo. Sit error voluptas repellat rerum quidem, soluta enim
-        perferendis voluptates laboriosam. Distinctio, officia quis dolore quos
-        sapiente tempore alias.
+       {{product.description}}
       </p>
       <div class="table-responsive">
         <table class="table table-sm table-borderless mb-0">
@@ -175,25 +172,13 @@
         <li class="nav-item">
           <a
             class="nav-link"
-            id="info-tab"
-            data-toggle="tab"
-            href="#info"
-            role="tab"
-            aria-controls="info"
-            aria-selected="false"
-            >Information</a
-          >
-        </li>
-        <li class="nav-item">
-          <a
-            class="nav-link"
             id="reviews-tab"
             data-toggle="tab"
             href="#reviews"
             role="tab"
             aria-controls="reviews"
             aria-selected="false"
-            >Reviews (1)</a
+            >Reviews ({{comments|length}})</a
           >
         </li>
       </ul>
@@ -259,97 +244,39 @@
           role="tabpanel"
           aria-labelledby="reviews-tab"
         >
-          <h5><span>1</span> review for <span>Fantasy T-shirt</span></h5>
-          <div class="media mt-3 mb-4">
-            <img
-              class="d-flex mr-3 z-depth-1"
-              src="https://mdbootstrap.com/img/Photos/Others/placeholder1.jpg"
-              width="62"
-              alt="Generic placeholder image"
-            />
-            <div class="media-body">
-              <div class="d-sm-flex justify-content-between">
-                <p class="mt-1 mb-2">
-                  <strong>Marthasteward </strong>
-                  <span>– </span><span>January 28, 2020</span>
-                </p>
-                <ul class="rating mb-sm-0">
-                  <li>
-                    <i class="fas fa-star fa-sm text-primary"></i>
-                  </li>
-                  <li>
-                    <i class="fas fa-star fa-sm text-primary"></i>
-                  </li>
-                  <li>
-                    <i class="fas fa-star fa-sm text-primary"></i>
-                  </li>
-                  <li>
-                    <i class="fas fa-star fa-sm text-primary"></i>
-                  </li>
-                  <li>
-                    <i class="far fa-star fa-sm text-primary"></i>
-                  </li>
-                </ul>
+          <h5><span>({{comments|length}})</span> review for <span>Fantasy T-shirt</span></h5>
+          {% for comment in comments %}
+            <div class="media mt-3 mb-4">
+              <div class="media-body">
+                <div class="d-sm-flex justify-content-between">
+                  <p class="mt-1 mb-2">
+                    <!-- show commented -->
+
+                    <strong>{{comment.customer}}</strong>
+                    <span>– </span><span>{{comment.created}}</span>
+                  </p>
+                </div>
+                <p class="mb-0">{{comment.content}}</p>
               </div>
-              <p class="mb-0">Nice one, love it!</p>
             </div>
-          </div>
+          {% endfor %}
           <hr />
           <h5 class="mt-4">Add a review</h5>
-          <p>Your email address will not be published.</p>
-          <div class="my-3">
-            <ul class="rating mb-0">
-              <li>
-                <a href="#!">
-                  <i class="fas fa-star fa-sm text-primary"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#!">
-                  <i class="fas fa-star fa-sm text-primary"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#!">
-                  <i class="fas fa-star fa-sm text-primary"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#!">
-                  <i class="fas fa-star fa-sm text-primary"></i>
-                </a>
-              </li>
-              <li>
-                <a href="#!">
-                  <i class="far fa-star fa-sm text-primary"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
           <div>
-            <!-- Your review -->
-            <div class="md-form md-outline">
-              <textarea
-                id="form76"
-                class="md-textarea form-control pr-6"
-                rows="4"
-              ></textarea>
-              <label for="form76">Your review</label>
-            </div>
-            <!-- Name -->
-            <div class="md-form md-outline">
-              <input type="text" id="form75" class="form-control pr-6" />
-              <label for="form75">Name</label>
-            </div>
-            <!-- Email -->
-            <div class="md-form md-outline">
-              <input type="email" id="form77" class="form-control pr-6" />
-              <label for="form77">Email</label>
-            </div>
-            <div class="text-right pb-2">
-              <button type="button" class="btn btn-primary">
-                Add a review
-              </button>
+            <!-- Add review -->
+              <div class="md-form md-outline">
+                <label for="form76">Your review</label>
+                <textarea
+                  id="commentcontent"
+                  class="md-textarea form-control pr-6"
+                  rows="4"
+                  required
+                ></textarea>
+              </div>
+                <button data-product="{{product.id}}" data-action="addcomment" id="addcomment" class="btn btn-primary" style="border: 5px; margin: 5px;">
+                  Add a review
+                </button>
+           
             </div>
           </div>
         </div>
@@ -358,4 +285,5 @@
     <!-- Classic tabs -->
   </div>
 </section>
+<script type="text/javascript" src="{% static 'js/addcomment.js' %}"></script>
 {% endblock content %}
