--- a/pyecommerce/store/templates/store/cart.html
+++ b/pyecommerce/store/templates/store/cart.html
@@ -60,11 +60,11 @@
         </div>
         <div style="flex: 1"><p>{{item.get_total}}vnd</p></div>
          <div style="flex:1">
-          <input type="radio" id="Small" name="size-option"  value="Small">
+          <input type="radio" id="Small" classname="smallsize" name="size-option{{item.product.id}}"  value="Small">
           <label for="Small">Small</label><br>
-          <input type="radio" id="Medium" name="size-option" value="Medium">
+          <input type="radio" id="Medium" name="size-option{{item.product.id}}" value="Medium">
           <label for="Medium">Medium</label><br>
-          <input type="radio" id="Large" name="size-option" value="Large">
+          <input type="radio" id="Large" name="size-option{{item.product.id}}" value="Large">
           <label for="Large">Large</label>
         </div>
         <div style="flex: 1">
