--- a/pyecommerce/store/templates/store/main.html
+++ b/pyecommerce/store/templates/store/main.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
-
+    <link rel="stylesheet" type="text/css" href="{% static 'css/profile.css' %}">
     <title>Ecommerce</title>
 </head>
 <body>
@@ -25,8 +25,8 @@
             </ul>
             <div class="form-inline my-2 my-lg-0">
                 {% if user.is_authenticated %}
-                    <p> Welcome, {{user.first_name}} {{user.last_name}}</p>
-                     <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                    <a href="{% url 'customerprofile' %}" style="color: aliceblue;"> Welcome, {{user.first_name}} {{user.last_name}}</a>
+                     <a class="nav-link btn" href="{% url 'logout' %}">Logout</a>
                 {% else %}
                     <a href="{% url 'login' %}" class="btn btn-warning">Login</a>
                 {% endif %}
@@ -51,6 +51,7 @@
     <script type="text/javascript" src="{% static 'js/detailProduct.js' %}"></script>
     <script type="text/javascript">
         var user = '{{request.user}}'
+        console.log(user);
         function getToken(name){
             var cookieValue = null;
             if(document.cookie && document.cookie !== ''){
