--- a/pyecommerce/store/templates/store/registration/profile.html
+++ b/pyecommerce/store/templates/store/registration/profile.html
@@ -45,9 +45,9 @@
                   <path
                     d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"
                   ></path></svg
-                >Website
+                >spend money Total
               </h6>
-              <span class="text-secondary">https://bootdey.com</span>
+              <span class="text-secondary">$$${{total_spend_money}}</span>
             </li>
             <li
               class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
@@ -160,6 +160,25 @@
             <hr />
             <div class="row">
               <div class="col-sm-3">
+                <h6 class="mb-0">Date of birth</h6>
+              </div>
+              {% if user.customer.dob%}
+                <p>{{user.customer.dob|date:"SHORT_DATE_FORMAT"}}</p>
+              {% else %}
+                <input
+                  type="date"
+                  id="dobinput"
+                  readonly
+                  class="col-sm-8 text-secondary"
+                />
+                <button class="col-sm-1 btn" onclick="setReadonly('dobinput')">
+                  <i class="fas fa-edit" style="font-size: 24px"></i>
+                </button>
+              {% endif %}
+            </div>
+            <hr />
+            <div class="row">
+              <div class="col-sm-3">
                 <h6 class="mb-0">Email</h6>
               </div>
               <input
@@ -209,7 +228,7 @@
               <hr />
               <div class="row">
                 <div class="col-sm-4">
-                  <button class="btn btn-outline-primary mb-0" onclick="updateCustomerInf('{{user.phone}}','{{user.email}}', '{{user.address}}')" disabled id="savebtn">Save</button>
+                  <button class="btn btn-outline-primary mb-0" onclick="updateCustomerInf('{{user.phone}}','{{user.email}}', '{{user.address}}', '{{user.customer.dob}}')" disabled id="savebtn">Save</button>
                 </div>
               </div>
             </div>
