--- a/pyecommerce/store/templates/store/main.html
+++ b/pyecommerce/store/templates/store/main.html
@@ -64,7 +64,7 @@
     <script type="text/javascript" src="{% static 'js/detailProduct.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/moment@2.24.0/moment.min.js"></script>
     <script type="text/javascript">
-        var user = '{{request.user}}'
+        var user = '{{request.user}}';
         console.log(user);
         function getToken(name){
             var cookieValue = null;
