--- a/pyecommerce/store/templates/store/cart.html
+++ b/pyecommerce/store/templates/store/cart.html
@@ -60,11 +60,23 @@
         </div>
         <div style="flex: 1"><p>{{item.get_total}}vnd</p></div>
          <div style="flex:1">
-          <input type="radio" id="Small" classname="smallsize" name="size-option{{item.product.id}}"  value="Small">
+          {% if item.option == 'Small' %}
+            <input type="radio" id="Small" class="size" checked name="{{item.product.id}}" data-product="{{item.product.id}}" value="Small">
+          {% else %}
+            <input type="radio" id="Small" class="size" name="{{item.product.id}}" data-product="{{item.product.id}}" value="Small">
+          {% endif %}
           <label for="Small">Small</label><br>
-          <input type="radio" id="Medium" name="size-option{{item.product.id}}" value="Medium">
+          {% if item.option == 'Medium' %}
+            <input type="radio" id="Medium" checked name="{{item.product.id}}" data-product="{{item.product.id}}" class="size" value="Medium">
+          {% else %}
+            <input type="radio" id="Medium" name="{{item.product.id}}" data-product="{{item.product.id}}" class="size" value="Medium">
+          {% endif %}
           <label for="Medium">Medium</label><br>
-          <input type="radio" id="Large" name="size-option{{item.product.id}}" value="Large">
+          {% if item.option == 'Large' %}
+            <input type="radio" id="Large" checked name="{{item.product.id}}" class="size" data-product="{{item.product.id}}" value="Large">
+          {% else %}
+            <input type="radio" id="Large" name="{{item.product.id}}" class="size" data-product="{{item.product.id}}" value="Large">
+          {% endif %}
           <label for="Large">Large</label>
         </div>
         <div style="flex: 1">
