--- a/pyecommerce/store/templates/store/checkout.html
+++ b/pyecommerce/store/templates/store/checkout.html
@@ -4,13 +4,14 @@
   <div class="row">
 		<div class="col-lg-4">
 			<div class="box-element" id="form-wrapper">
-				<form id="form">
+				<form id="form" action="" method="POST">
+					{% csrf_token %}
 					<div id="user-info">
 						<div class="form-field">
-							<input required class="form-control" type="text" name="name" placeholder="Receiver Name..">
+							<input required class="form-control" type="text" name="receiver_name" placeholder="Receiver Name..">
 						</div>
 						<div class="form-field">
-							<input required class="form-control" type="text" name="email" placeholder="Phone..">
+							<input required class="form-control" type="text" name="receiver_phone" placeholder="Phone..">
 						</div>
 					</div>
 
@@ -19,13 +20,21 @@
 						<p>Shipping Information:</p>
 						<hr>
 						<div class="form-field">
-							<input class="form-control" type="text" name="address" placeholder="Address..">
-						</div>
-						<div class="form-field">
 							<input class="form-control" type="text" name="city" placeholder="City..">
 						</div>
 						<div class="form-field">
-							<input class="form-control" type="datetime" name="state" placeholder="Order Date..">
+							<input class="form-control" type="text" name="address" placeholder="Address..">
+						</div>
+						<div class="form-field">
+							<input required class="form-control" type="datetime-local" name="order_date" placeholder="Order Date..">
+						</div>
+						<hr>
+						<p>Choose payment method:</p>
+						<div class="form-field">
+							<input type="radio" id="COD" name="paymentmethod" value="COD" required>
+							<label for="COD">COD</label><br>
+							<input type="radio" id="VNPAY" name="paymentmethod" value="VNPAY" required>
+							<label for="VNPAY">VNPAY</label>
 						</div>
 					</div>
 
