--- a/pyecommerce/store/templates/store/store.html
+++ b/pyecommerce/store/templates/store/store.html
@@ -10,6 +10,7 @@
       <button
         data-action="add"
         data-product="{{product.id}}"
+        data-size="Medium"
         class="btn btn-outline-secondary add-btn update-cart"
       >
         Add to Cart
