--- a/pyecommerce/store/templates/store/detailproduct.html
+++ b/pyecommerce/store/templates/store/detailproduct.html
@@ -30,7 +30,7 @@
       <h5>{{product.name}}</h5>
       <!-- <p class="mb-2 text-muted text-uppercase small">{{product.category}}</p> -->
       <p>
-        <span class="mr-1"><strong>Price: {{product.price}} VND</strong></span>
+        <span class="mr-1"><strong>Price: {{product.price|floatformat:0}} VND</strong></span>
       </p>
       <!-- <p class="pt-1">
        {{product.description}}
@@ -54,15 +54,74 @@
         </table> -->
       </div>
       <hr />
-      <div class="table-responsive mb-2">
+      <!-- <div class="table-responsive mb-2">
         <table class="table table-sm table-borderless">
-          <tbody>
-            <tr>
-              <td class="pl-0 pb-0 w-25">Quantity</td>
-              <td class="pb-0">Select size</td>
-            </tr>
-            <tr>
-              <td class="pl-0">
+          <tbody> -->
+            <div 
+              class="form-inline my-2 my-lg-0 row"
+              style="display: flex; align-items: center;"
+            >
+              <div class="col-md-3"> 
+                <td class="pb-0">Select size: </td>
+              </div>
+              <div class="form-inline my-2 my-lg-0 col-md-8"
+              style="display: flex; align-items: center;">
+                  <!-- <div class="mt-1"> -->
+                    <div class="form-check form-check-inline pl-0">
+                      <input
+                        type="radio"
+                        class="form-check-input"
+                        id="small"
+                        name="size-option"
+                        value="Small"
+                      />
+                      <label
+                        class="form-check-label small text-uppercase card-link-secondary"
+                        for="small"
+                        >Small</label
+                      >
+                    </div>
+                    <div class="form-check form-check-inline pl-0">
+                      <input
+                        type="radio"
+                        class="form-check-input"
+                        id="medium"
+                        name="size-option"
+                        checked
+                        value="Medium"
+                      />
+                      <label
+                        class="form-check-label small text-uppercase card-link-secondary"
+                        for="medium"
+                        >Medium</label
+                      >
+                    </div>
+                    <div class="form-check form-check-inline pl-0">
+                      <input
+                        type="radio"
+                        class="form-check-input"
+                        id="large"
+                        name="size-option"
+                        value="Large"
+                      />
+                      <label
+                        class="form-check-label small text-uppercase card-link-secondary"
+                        for="large"
+                        >Large</label
+                      >
+                    </div>
+                  <!-- </div> -->
+              </div>
+            </div>
+            <hr/>
+            <div 
+              class="form-inline my-2 my-lg-0 row"
+              style="display: flex; align-items: center; margin-top: 15px;"
+            >
+              <div class="col-md-3" style="margin-top: 10px;">
+                <p class="pl-0 pb-0 w-25">Quantity: </p>
+              </div>
+              <div class="col-md-5">
                 <div class="def-number-input number-input safari_only mb-0">
                   <input
                     class="quantity"
@@ -71,66 +130,26 @@
                     id="quantity"
                     value="1"
                     type="number"
-                    style="width: 50%; text-align: center;"
+                    style="width: 40%; text-align: center;"
                   />
                 </div>
-              </td>
-              <td>
-                <div class="mt-1">
-                  <div class="form-check form-check-inline pl-0">
-                    <input
-                      type="radio"
-                      class="form-check-input"
-                      id="small"
-                      name="size-option"
-                      value="Small"
-                    />
-                    <label
-                      class="form-check-label small text-uppercase card-link-secondary"
-                      for="small"
-                      >Small</label
-                    >
-                  </div>
-                  <div class="form-check form-check-inline pl-0">
-                    <input
-                      type="radio"
-                      class="form-check-input"
-                      id="medium"
-                      name="size-option"
-                      checked
-                      value="Medium"
-                    />
-                    <label
-                      class="form-check-label small text-uppercase card-link-secondary"
-                      for="medium"
-                      >Medium</label
-                    >
-                  </div>
-                  <div class="form-check form-check-inline pl-0">
-                    <input
-                      type="radio"
-                      class="form-check-input"
-                      id="large"
-                      name="size-option"
-                      value="Large"
-                    />
-                    <label
-                      class="form-check-label small text-uppercase card-link-secondary"
-                      for="large"
-                      >Large</label
-                    >
-                  </div>
-                </div>
-              </td>
-            </tr>
-          </tbody>
+              </div>
+            </div>
+          <!-- </tbody>
         </table>
-      </div>
-      <button type="button" class="btn btn-primary btn-md mr-1 mb-2">
+      </div> -->
+      <!-- <button type="button" class="btn btn-primary btn-md mr-1 mb-2">
         Buy now
-      </button>
-      <button type="button" class="btn btn-light btn-md mr-1 mb-2" data-action="addtocart" id="addtocartBtn" data-product="{{product.id}}">
-        <i class="fas fa-shopping-cart pr-2"></i>Add to cart
+      </button> -->
+      <hr/>
+      <button 
+        type="button" 
+        class="btn btn-primary btn-md mr-1 mb-2" 
+        data-action="addtocart" id="addtocartBtn" 
+        data-product="{{product.id}}"
+      >
+        <i class="fas fa-shopping-cart pr-2"></i>
+        Add to cart
       </button>
     </div>
     <!-- Classic tabs -->
